# morphy

./: README.md  RELEASING.md  benchmark.py  convert_digrec.py  convert_gorman.py  export_conllu.py  export_onnx.py  fix_heads_deep.py  pyproject.toml  train.py  upload_weights.py  verify_onnx.py
.github/workflows/: release.yml  test.yml
morphy/: __init__.py  _revisions.py  model.py  onnx_model.py  tokenize.py  weights.py
opla/: __init__.py  _revisions.py  weights.py
tests/: conftest.py  test_morphy.py
